--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,15 @@
         socket.on('mensaje', function(payload) {
             console.log('Escuchando: ', payload);
         });
+
+        socket.on('nuevo-mensaje', function(payload) {
+            console.log('Escuchando Mensaje Desde El Cliente De Flutter: ', payload);
+        });
+
+        socket.on('active-bands', function(payload) {
+            console.clear();
+            console.table(payload);
+        });
     </script>
 </body>
 
